# cs846-uwaterloo

./: README.md
week-10-feedback/Problem_B/: order_parser_after.py  order_parser_before.py
week-12-feedback/Problem_A/: Prob_A.py
week-12-feedback/Problem_B/: data_generator.py  main.py  models.py  processor.py
week-5-feedback/Problem A_1/: formatter.py  model.py
week-5-feedback/Problem_A_1/: dataset.py  distributed.py  trainer.py  utils.py
week-6-feedback/Problem_A/: kth_smallest_path.md  test_a2_kth_smallest_path.py
week-6-feedback/Problem_E/: README.md  pyproject.toml
week-6-feedback/Problem_E/problems/: problem_E.py
week-6-feedback/Problem_E/tests/: test_problem_E.py
week-8-feedback/Problem_A/: pyproject.toml  readme
week-8-feedback/Problem_A_Maksym/: Guideline_10_Minimal_Reproducible_Context.md  Guideline_12.md  problem.py
week-8-feedback/Problem_B/: problem_file.py  test_payroll.py
week-8-feedback/Problem_C/: x_state_42.tmp
week-9-feedback/Problem_A/: promo_checkout.py
week-9-feedback/Problem_B/: README.md  pyproject.toml
week-9-feedback/Problem_B/src/bank_account_system/: __init__.py  account.py  exceptions.py  ledger.py  notifications.py  reporting.py  statement_aggregator.py  statement_filters.py  statement_models.py  validators.py
week-9-feedback/Problem_B/tests/: test_bank_account.py
week-9-feedback/Problem_C/: README.md  checkout_service.py  feedback.md  prompt_cards.md  pytest_log_v1.txt  pytest_log_v2.txt  pytest_log_v3.txt  test_checkout_v1_spec_based.py  test_checkout_v2_repaired.py  test_checkout_v3_spec_anchored.py
(+7 files in other folders)
