[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-account-system"
version = "0.1.0"
description = "Sample bank account management package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CS846 workspace" }
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]